Fixed gaping issues inside dialog box on form CSS

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ body {
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
+    gap: 20px;
 }
 
 .dialogbox[open] {
@@ -115,4 +116,5 @@ body {
 form {
     display: flex;
     flex-direction: column;
+    gap: 5px;
 }
